@@ -83,6 +83,7 @@ edit_rbacdeny0=RBAC only controls selected module ACLs
 edit_rbacdeny1=RBAC controls all modules and ACLs
 edit_special=Special
 edit_templock=Temporarily locked
+edit_temppass=Force change at next login
 edit_days=Allowed days of the week
 edit_alldays=Every day
 edit_seldays=Only selected days ..
